Create popup that stores rext by hostname

--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,21 @@
 <head>
   <meta charset='UTF-8'>
   <title>Stylite Editor</title>
+  <style>
+    body {
+      width: 300px;
+      padding: 5px;
+    }
+
+    textarea {
+      display: block;
+      white-space: pre;
+      width: 100%;
+      min-height: 300px;
+      margin-bottom: 10px;
+      font-family: monospace;
+    }
+  </style>
 </head>
 <body>
   <h1>Welcome!</h1>
