--- a/src/popup.html
+++ b/src/popup.html
@@ -4,18 +4,38 @@
   <meta charset='UTF-8'>
   <title>Stylite Editor</title>
   <style>
-    body {
-      width: 300px;
-      padding: 5px;
+    body, html {
+      margin: 0;
+      padding: 0;
+    }
+
+    .subhead {
+      padding: 10px;
+      margin: 0;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .clearButton {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      line-height: 20px;
+      text-transform: uppercase;
+    }
+
+    #root {
+      width: 500px;
+      padding: 0;
+      position: relative;
     }
 
     textarea {
-      display: block;
-      white-space: pre;
-      width: 100%;
-      min-height: 300px;
-      margin-bottom: 10px;
       font-family: monospace;
+    }
+
+    #root .CodeMirror {
+      height: 500px;
+      font-size: 14px;
     }
   </style>
 </head>
